--- a/view/template/class-attr/select.ejs
+++ b/view/template/class-attr/select.ejs
@@ -13,8 +13,11 @@
         },{
             name: 'type',
             format: 'label'
+        },{
+            name: 'description'
         }],
         order: {name: 1},
-        create: null
+        create: null,
+        filter: {}
     }
 }) %>
