--- a/view/template/class-behavior/_form.ejs
+++ b/view/template/class-behavior/_form.ejs
@@ -13,7 +13,7 @@
             items: 'labels'
         }
     }, {
-        template: _view.get('_part/attr/string'),
+        template: _view.get('_part/attr/number'),
         params: {
             attr: 'orderNumber'
         }
