--- a/view/template/class-group/update.ejs
+++ b/view/template/class-group/update.ejs
@@ -36,8 +36,7 @@ const relationTemplate = _view.get('_part/attr/relation');
             }
         }
     },{
-        id: 'actionBinder',
-        label: 'Action binder',
+        id: 'Action binders',
         content: {
             template: relationTemplate,
             attr: 'actionBinder',
