--- a/view/template/node/_tabMain.ejs
+++ b/view/template/node/_tabMain.ejs
@@ -41,7 +41,7 @@
             displayValue: model.getRelatedTitle('report')
         }
     },{
-        template: _view.get('_part/attr/string'),
+        template: _view.get('_part/attr/number'),
         params: {
             attr: 'orderNumber'
         }
