--- a/view/template/tree-view-level/_form.ejs
+++ b/view/template/tree-view-level/_form.ejs
@@ -1,4 +1,5 @@
 <% layout(_view.get(_layout)) %>
+<% block('tab', 'Tree level') %>
 
 <%- include(_view.get('_part/attr/static'), {
     attr: 'sourceClass',
@@ -7,26 +8,20 @@
     url: ['class/update', sourceClass]
 }) %>
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/select'),
-        params: {
-            attr: 'refAttr',
-            items: refAttrs,
-            update: _url('class-attr/update'),
-        }
-    },{
-        template: _view.get('_part/attr/select'),
-        params: {
-            attr: 'view',
-            items: null,
-            displayValue: model.getRelatedTitle('view'),
-            select2: {ajax: {url: _url('list-select-view')}},
-            update: _url('view/update'),
-            depends: [{attr: 'refAttr', param: 'id'}],
-            actionBinder: {enable: ['NOT EMPTY', 'refAttr']}
-        }
-    }]
+<%- include(_view.get('_part/attr/select'), {
+    attr: 'refAttr',
+    items: refAttrs,
+    update: _url('class-attr/update')
+}) %>
+
+<%- include(_view.get('_part/attr/select'), {
+    attr: 'view',
+    items: null,
+    displayValue: model.getRelatedTitle('view'),
+    select2: {ajax: {url: _url('list-select-view')}},
+    update: _url('view/update'),
+    depends: [{attr: 'refAttr', param: 'id'}],
+    actionBinder: {enable: ['NOT EMPTY', 'refAttr']}
 }) %>
 
 <%- include(_view.get('_part/attr/checkbox'), {
