--- a/view/template/view-attr/update.ejs
+++ b/view/template/view-attr/update.ejs
@@ -14,7 +14,7 @@ if (classAttr.isRelation() || classAttr.isUser()) {
     });
 }
 items.push({
-    id: 'Validation',
+    id: 'Validators',
     content: {
         template: _view.get('_part/attr/relation'),
         attr: 'rules',
@@ -56,7 +56,7 @@ items.push({
         }
     }
 },{
-    id: 'Action binder',
+    id: 'Action binders',
     content: {
         template: _view.get('_part/attr/relation'),
         attr: 'actionBinder',
