--- a/view/template/view-group/update.ejs
+++ b/view/template/view-group/update.ejs
@@ -32,7 +32,7 @@
             }
         }
     }, {
-        id: 'Action binder',
+        id: 'Action binders',
         content: {
             template: _view.get('_part/attr/relation'),
             attr: 'actionBinder',
