--- a/view/template/view/inherited.ejs
+++ b/view/template/view/inherited.ejs
@@ -2,21 +2,17 @@
 <% block('tab', 'View') %>
 <% block('title', model.getTitle()); %>
 <% block('titleTranslation', 'none'); %>
+<%
+const staticTemplate = _view.get('_part/attr/static');
+%>
+<%- include(staticTemplate, {
+    attr: 'original',
+    displayValue: model.getRelatedTitle('original'),
+    url: ['view/update', model.rel('original')]
+}) %>
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/static'),
-        params: {
-            attr: 'original',
-            displayValue: model.getRelatedTitle('original'),
-            url: ['view/update', model.rel('original')]
-        }
-    }, {
-        template: _view.get('_part/attr/static'),
-        params: {
-            attr: 'class',
-            displayValue: model.getRelatedTitle('class'),
-            url: ['class/update', model.rel('class')]
-        }
-    }]
+<%- include(staticTemplate, {
+    attr: 'class',
+    displayValue: model.getRelatedTitle('class'),
+    url: ['class/update', model.rel('class')]
 }) %>
