--- a/view/template/attr-behavior/_form.ejs
+++ b/view/template/attr-behavior/_form.ejs
@@ -9,7 +9,7 @@
             items: 'labels'
         }
     },{
-        template: _view.get('_part/attr/string'),
+        template: _view.get('_part/attr/number'),
         params: {
             attr: 'orderNumber'
         }
