--- a/view/template/report-group/_form.ejs
+++ b/view/template/report-group/_form.ejs
@@ -10,10 +10,14 @@
 <%- include(_view.get('_part/group/columns'), {
     items: [{
         template: _view.get('_part/attr/string'),
-        params: {attr: 'name'}
+        params: {
+            attr: 'name'
+        }
     }, {
         template: _view.get('_part/attr/string'),
-        params: {attr: 'label'}
+        params: {
+            attr: 'label'
+        }
     }]
 }) %>
 
