--- a/view/template/transition/_form.ejs
+++ b/view/template/transition/_form.ejs
@@ -4,42 +4,30 @@
 const jsonTemplate = _view.get('_part/attr/json');
 const stringTemplate = _view.get('_part/attr/string');
 %>
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        items: [{
-            template: stringTemplate,
-            params: {
-                attr: 'name'
-            }
-        }, {
-            template: stringTemplate,
-            params: {
-                attr: 'label'
-            }
-        }]
-    },{
-        items: [{
-            template: _view.get('_part/attr/static'),
-            params: {
-                attr: 'class',
-                displayValue: model.getRelatedTitle('class'),
-                url: ['class/update', model.rel('class')]
-            }
-        }, {
-            template: stringTemplate,
-            params: {
-                attr: 'orderNumber'
-            }
-        }]
-    }]
+<%- include(stringTemplate, {
+    attr: 'name'
+}) %>
+
+<%- include(stringTemplate, {
+    attr: 'label'
 }) %>
 
 <%- include(stringTemplate, {
     attr: 'hint'
 }) %>
 
+<%- include(_view.get('_part/attr/static'), {
+    attr: 'class',
+    displayValue: model.getRelatedTitle('class'),
+    url: ['class/update', model.rel('class')]
+}) %>
+
 <%- include(_view.get('_part/attr/text'), {
     attr: 'description'
+}) %>
+
+<%- include(stringTemplate, {
+    attr: 'orderNumber'
 }) %>
 
 <%- include(_view.get('_part/attr/checkbox'), {
