--- a/view/template/view-group/_tabMain.ejs
+++ b/view/template/view-group/_tabMain.ejs
@@ -2,6 +2,11 @@
 const checkboxTemplate = _view.get('_part/attr/checkbox');
 const overriddenTemplate = _view.get('_part/attr/overridden');
 %>
+<%- include(overriddenTemplate, {
+    attr: 'description',
+    template: _view.get('_part/attr/text')
+}) %>
+
 <%- include(_view.get('_part/group/columns'), {
     items: [{
         template: overriddenTemplate,
@@ -25,11 +30,6 @@ const overriddenTemplate = _view.get('_part/attr/overridden');
 }) %>
 
 <%- include(overriddenTemplate, {
-    attr: 'description',
-    template: _view.get('_part/attr/text')
-}) %>
-
-<%- include(overriddenTemplate, {
     attr: 'hint',
     template: _view.get('_part/attr/string')
 }) %>
@@ -37,4 +37,10 @@ const overriddenTemplate = _view.get('_part/attr/overridden');
 <%- include(overriddenTemplate, {
     attr: 'options',
     template: _view.get('_part/attr/json')
+}) %>
+
+<%- include(_view.get('_part/attr/static'), {
+    attr: 'view',
+    displayValue: model.getRelatedTitle('view'),
+    url: ['view/update', model.rel('view')]
 }) %>
