--- a/view/template/view/_form.ejs
+++ b/view/template/view/_form.ejs
@@ -1,27 +1,18 @@
 <% layout(_view.get(_layout)) %>
 <% block('tab', 'View') %>
+<%
+const stringTemplate = _view.get('_part/attr/string');
+%>
+<%- include(stringTemplate, {
+    attr: 'name'
+}) %>
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        items: [{
-            template: _view.get('_part/attr/string'),
-            params: {
-                attr: 'name'
-            }
-        }, {
-            template: _view.get('_part/attr/string'),
-            params: {
-                attr: 'label'
-            }
-        }]
-    }, {
-        items: [{
-            template: _view.get('_part/attr/static'),
-            params: {
-                attr: 'class',
-                displayValue: model.getRelatedTitle('class'),
-                url: ['class/update', model.rel('class')]
-            }
-        }]
-    }]
+<%- include(stringTemplate, {
+    attr: 'label'
+}) %>
+
+<%- include(_view.get('_part/attr/static'), {
+    attr: 'class',
+    displayValue: model.getRelatedTitle('class'),
+    url: ['class/update', model.rel('class')]
 }) %>
