--- a/view/template/view/_tabGroups.ejs
+++ b/view/template/view/_tabGroups.ejs
@@ -1,10 +1,7 @@
 
-<%- include(_view.get('_part/attr/checkbox'), {
-    attr: 'disableGroups'
-}) %>
-
 <%- include(_view.get('_part/attr/relation'), {
     attr: 'groups',
+    css: 'no-label',
     data: {
         columns: [{
             name: 'classGroup',
@@ -44,4 +41,7 @@
     }
 }) %>
 
-
+<%- include(_view.get('_part/attr/checkbox'), {
+    attr: 'disableGroups',
+    css: 'no-label'
+}) %>
