--- a/view/template/view/link.ejs
+++ b/view/template/view/link.ejs
@@ -1,35 +1,25 @@
 <% layout(_view.get(_layout)) %>
 <% block('tab', 'View') %>
 <% block('title', 'Create view') %>
-
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/static'),
-        params: {
-            attr: 'original',
-            displayValue: model.getRelatedTitle('original'),
-            url: ['view/update', model.rel('original')]
-        }
-    }, {
-        template: _view.get('_part/attr/static'),
-        params: {
-            attr: 'class',
-            displayValue: model.getRelatedTitle('class'),
-            url: ['class/update', model.rel('class')]
-        }
-    }]
+<%
+const staticTemplate = _view.get('_part/attr/static');
+%>
+<%- include(staticTemplate, {
+    attr: 'original',
+    displayValue: model.getRelatedTitle('original'),
+    url: ['view/update', model.rel('original')]
 }) %>
 
-<%- include(_view.get('_part/group/columns'), {
-    items: [{
-        template: _view.get('_part/attr/static'),
-        params: {
-            attr: 'name'
-        }
-    }, {
-        template: _view.get('_part/attr/static'),
-        params: {
-            attr: 'label'
-        }
-    }]
+<%- include(staticTemplate, {
+    attr: 'name'
+}) %>
+
+<%- include(staticTemplate, {
+    attr: 'label'
+}) %>
+
+<%- include(staticTemplate, {
+    attr: 'class',
+    displayValue: model.getRelatedTitle('class'),
+    url: ['class/update', model.rel('class')]
 }) %>
